# simulation_plugin

./: .gitignore  CMakeLists.txt  scratch_default_probe.json
cmake/: CPM.cmake
docs/: architecture.md
include/: simulation_compiler.hpp  simulation_hash.hpp  simulation_instance.hpp  simulation_instance_manager.hpp  simulation_json_utils.hpp  simulation_model_registry.hpp  simulation_model_validator.hpp  simulation_mujoco_utils.hpp  simulation_paths.hpp  simulation_plug.hpp  simulation_record_manager.hpp  simulation_scene_manager.hpp  simulation_scene_refs.hpp  simulation_task_manager.hpp  simulation_visual.hpp  singleton_dclp.hpp
source/: simulation_compiler.cpp  simulation_instance.cpp  simulation_instance_manager.cpp  simulation_model_registry.cpp  simulation_model_validator.cpp  simulation_paths.cpp  simulation_plug.cpp  simulation_record_manager.cpp  simulation_scene_manager.cpp  simulation_task_manager.cpp  simulation_visual.cpp
tests/: attached_workpiece.xml  falling_box.xml  included_payload.xml  simple_arm.urdf  simple_model.xml  simple_scene.json  simulation_manager_smoke.cpp  simulation_rpc_smoke.json  simulation_ws_integration.cpp
